# charms-app

./: Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ENHANCEMENTS.md  ENHANCEMENTS_V2.md  HACKATHON.md  IMPLEMENTATION_COMPARISON.md  ODDS_AND_LP_COMPARISON.md  PITCH_DECK.md  README.md  UI_IMPROVEMENTS.md  V2_IMPLEMENTATION_COMPLETE.md  WHITEPAPER.md
frontend/: INTEGRATION.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: betslip-panel.tsx  header.tsx  lp-dashboard.tsx  match-card.tsx
frontend/components/ui/: button.tsx  card.tsx
frontend/lib/: types.ts  utils.ts
frontend/lib/hooks/: useBetslip.ts  useBetting.ts  useCharms.ts  useLiquidityPool.ts  useMatches.ts  useWallet.ts
frontend/lib/types/: betslip.ts
frontend/public/: charms_lib_bg.wasm
scripts/: deploy.sh  mint-badges.sh
spells/: 01-create-season.yaml  02-create-matches.yaml  03-place-bet.yaml  04-resolve-match.yaml  05-settle-bet.yaml  06-mint-team-badge.yaml  07-trade-badge.yaml  08-predict-season-winner.yaml  09-mint-league-tokens.yaml  10-create-liquidity-pool.yaml  11-create-betslip-single.yaml  12-create-betslip-parlay.yaml  13-create-betslip-system.yaml  14-settle-betslip.yaml  17-lp-deposit.yaml  18-lp-withdraw.yaml
src/: lib.rs  main.rs
